# WIR

./: README.md  Retrieval_vis.ipynb  WIR_lang_det.ipynb  read_me.md
Analysis_of_Diff_Qrels_retrieved/: Qrels_Updated.py  Relabel_Janina_translated.xlsx  bm25_different_relevance.txt  dense_different_relevance.txt  new_human_llm_relabel.csv  relabel_Muhammed.xlsx
LLM_Rejudging/: Qrel_LLM_Judgements.py  README.md  Relabel_Janina_translated.csv  fremdsprachige_dokumente_volltext.xlsx  pyproject.toml  topics.xlsx
LLM_Rejudging/examples/: generate-qrels.py  generate-topics.py
LLM_Rejudging/tests/: test_generator_integration.py
LLM_Rejudging/topic_gen/: __init__.py  __main__.py  generate.py  models.py
LLM_Rejudging/topic_gen/prompts/: isearch-background.yaml  isearch-new-base.yaml  trec-base.yaml
Qrels_Updated/: Qrels_Updated.py  Relabel_Maryam_translated.csv  Relabel_Maryam_translated.xlsx  qrel_human.txt  qrel_rejudged_human.txt  qrels.txt  qrels_rejudged_LLM.txt  relabel_Muhammed.xlsx
Rejudged_Analysis/: Retrieval_vis_Maryam.ipynb
Runs_Qrel_Compare/: Runs_Comparision.py  qrel_human.txt  qrel_llm.txt  topics.tsv
topic-gen-main/: fremdsprachige_dokumente_volltext.csv
topic-gen-main/examples/: generate-topic-one.py
topic-gen-main/tests/: conftest.py  test_generator_unit.py  test_models_export.py
topic-gen-main/topic_gen/prompts/: -DNA-zero-shot.yaml  isearch-base.yaml  qrel_zeroshot_bing.yaml
